# X-2R

./: .gitignore  CMakeLists.txt  README.md  chat_window.c  chat_window.h  db_connection.c  db_connection.h  db_discord.sql  encryption.c  encryption.h  env_loader.c  env_loader.h  gtk.h  gtk_app.c  main.c  mainV2.c  main_client.c  main_old.c  main_server.c  mydiscord_MCD.xml  platform.h  protocol.c  protocol.h  run_gtk_app.bat  x2r.css
src/: main.c  main_server.c  run_gtk_app.bat  run_gtk_app.bat.in
src/components/: chat_page.c  chat_page.h  login_page.c  login_page.h  register_page.c  register_page.h
src/config/: env_loader.c  env_loader.h
src/database/: db_connection.c  db_connection.h
src/network/: platform.h  protocol.c  protocol.h
src/security/: encryption.c  encryption.h
src/styles/: app.css
src/types/: app_types.h
src/utils/: chat_utils.c  chat_utils.h  gtk_string_utils.c  gtk_string_utils.h  string_utils.c  string_utils.h
